fixed issue with scrollbar

--- a/Monsters/monster_cards.css
+++ b/Monsters/monster_cards.css
@@ -9,10 +9,12 @@
 
 body {
     width: 100vw;
+    width: 100%;
     height: 100vh;
     margin: 0;
     background: #191c29;
-    overflow: auto;
+    overflow-x: hidden;
+    overflow-y: auto;
 }
 
 .card {
@@ -33,9 +35,10 @@ body {
     list-style: none;
     padding: 0;
     display: grid;
-    grid-template-columns: repeat(4, 1fr);
-    gap: 1px;
+    grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
+    gap: 10px;
     max-width: 1200px;
+    max-width: 1000px;
     margin: 20px auto;
 }
 
